--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-table": "^8.19.2",
+    "@types/react-table": "^7.7.20",
     "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,6 +39,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
