--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# VITE_APP_API_URL="https://oldkns.webtm.ru/api"
-
-VITE_APP_API_URL="http://localhost:3001/api"
+VITE_APP_API_URL="https://oldkns.webtm.ru/api"
+# VITE_APP_API_URL="http://localhost:3001/api"
 
 
 
