--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_APP_API_URL="https://oldkns.webtm.ru/api"
-VITE_APP_API_URL="http://localhost:3001/api"
+VITE_APP_API_URL="https://oldkns.webtm.ru/api"
+# VITE_APP_API_URL="http://127.0.0.1:3001/api"
 
 
 
